--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Check codestyle
-        run: git ls-files *.{cpp,h} | xargs clang-format -i --verbose
+        run: git ls-files *.{cpp,h} | xargs clang-format -i --verbose && git diff --exit-code
+
+      - name: Test
+        run: make test && ./bin/test
 
       - name: Build application
         run: make
